--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     
   </head>
 
-  <body>
+  <body style="background-color:rgb(244, 244, 244, 0.7)">
     <%= render 'common/navbar' %>
     <div style="margin-top:40px;">
       <%= yield %>
