--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#1e90ff;color:white;">
   <% if role_signed_in? then %>
     <a class="navbar-brand" href="/works/<%= current_role.workurl %>"><%= Work.find(current_role.work_id).w_name %></a>
   <% else %>
-    <a class="navbar-brand" href="/top">タイトル</a>
+    <a class="navbar-brand" style="color:rgb(234, 234, 234,1);" href="/top">タイトル</a>
   <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
