--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -19,7 +19,7 @@
             <div class="col-sm-4" style="padding:15px 10px;">
                 <a href="/works/new?schedule-type=<%= t_card %>">
                 <p style="color:black;"><i class="fas fa-angle-double-right"></i>　<%= t_card %></p>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/common/image<%= (rand(13)+1).to_s %>.png" width="90%">
+                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/common/image<%= (rand(13)+1).to_s %>.png" style="width:90%;opacity:0.87;">
                 </a>
                 <div style="margin-top:20px;margin-left:5px;">
                 <a class="btn btn-sm btn-success" style="color:white" href="/works/new?schedule-type=<%= t_card %>">ToDoリストを作る</a>
