--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,36 +1,11 @@
-<div style="margin:30px 30px;">
-    <div class="top-search-section">
+<div>
+    <div class="top-search-section" style="margin-top:-40px;">
         <div class="text-center">
-        <h3><i class="fas fa-calendar"></i>　ToDoリストを登録しよう</h3>
+            <h3><i class="fas fa-calendar"></i>　ToDoリストを自動を作ってくれます
+            <br><small>※ 駄文</small></h3>
+            <br>
+            <a href="/templates/<%= (rand(13)+1).to_s %>" style="color:#eee;" class="btn btn-warning">登録する！</a>
         </div>
-        <br>
-        <!--
-        <form action="/works/new" method="get" >
-        <div class="row">
-        <div class="col-sm-3">
-        </div>
-        <div class="col-sm-6 text-center">
-            <div class="top-page-input">
-                <label name="start-date">開始日</label>
-                <input type="date" name="start-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-11-11"></input>
-                <label name="schedule-type">目的</label>
-                <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
-                    <option name="normal">自分で作る</option>
-                </select>
-                <div>
-                <label name="email">代表者メールアドレス</input>
-                <input type="email" name="email" class="form-control" style="width:300px;margin 0 auto;" placeholder="example@example.com"></input>
-                </div>
-            </div>
-        </div>
-        </div>
-        <br>
-        <div class="text-center">
-            <input type="submit" value="送信する" class="btn btn-success">
-        </div>
-        </form>
-        -->
-        <br>
     </div>
     <hr>
     <div class="top-category-area text-left">
@@ -48,6 +23,7 @@
         </div>
     </div>
     <hr>
+    <div style="margin:30px 30px;">
     <div class="explanation-area">
         <div class="text-center"><h3><i class="fas fa-mouse-pointer"></i>　使い方</h3></div>
         <br>
@@ -77,5 +53,6 @@
                 <br><br>
             </div>
         </div>
+    </div>
     </div>
 </div>
