--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -18,7 +18,7 @@
             <%= form_for(@work) do |f| %>
                 <h3 style="font-size:15px;">
                     <%= f.text_field :w_name, :value => params["schedule-type"], :class => "form-control", :style => "width:300px;height:70px;font-size:24px;display:inline-block;margin-bottom:5px;margin-left:-20px;" %>
-                    <input type="date" class="form-control" style="width:200px;display:inline-block;margin-left:20px;" value="<%= year_month_date(@today) %>"> までのスケジュール（JS未実装）
+                    <input type="date" class="form-control" style="width:200px;display:inline-block;margin-left:20px;" value="<%= year_month_date(@today) %>">　までのスケジュール
                 </h3>
                 <input type="hidden" name="template" value="<%= params["schedule-type"] %>">
                 <div class="row">
@@ -192,7 +192,7 @@
                     <% end %>
                 </div>
                 <div class="text-center" style="margin:0 auto;">
-                    <%= f.submit "スケジュール作成する", :class => "btn btn-warning btn-lg", :style => "color:white;" %>
+                    <%= f.submit "スケジュール作成する", :class => "btn btn-warning btn-lg", :style => "color:white;margin-left:-50px;" %>
                 </div>
                 <br>
             </div>
@@ -215,7 +215,7 @@
                         <% t_end_date   = Date.parse(year_month_date(@today.prev_day(task_collection_data.before_date).next_day(task_collection_data.date_duration))) %>
                         <% t_diff_date = ((t_end_date - t_start_date + 2).to_i/4).ceil %>
                         <h4>
-                            <%= task_collection_data.t_name %>　<%= t_start_date %>〜<%= t_end_date %>　<a href="" class="btn btn-success btn-sm">タスク追加</a>
+                            <a class="btn btn-info" style="color:white;"><%= task_collection_data.t_name %></a>　<%= t_start_date %>〜<%= t_end_date %>
                         </h4>
                         <br>
 
@@ -254,53 +254,8 @@
         </div>
             <% end %>
         <hr>
-        <!-- Modal -->
-
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">
-                タイトル　<input type="text" name="t_name" id="m-title" class="form-control" style="width:300px;display:inline-block;">
-                </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body">
-                    <label name="start-date" style="display:inline-block;margin-right:50px;">開始日</label><input type="date" id="m-start-date" class="form-control" style="width:200px;display:inline-block">
-                    <br>
-                    <label name="end-date" style="display:inline-block;margin-right:50px;">終了日</label><input type="date" id="m-end-date" class="form-control" style="width:200px;display:inline-block">
-                </div>
-                <div class="modal-footer">
-                <a id="edit-button"></a>
-                <a id="delete-button"></a>
-                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">閉じる</button>
-                </div>
-            </div>
-            </div>
-        </div>
     </div>
 </div>
-<script type="text/javascript">
-    $('#exampleModal').on('show.bs.modal', function (event) {
-    var button = $(event.relatedTarget);
-    var start_date = button.data('startdate');
-    var end_date = button.data('enddate');
-    var roll_people = button.data('role');
-    var title = button.data('title');
-    var t_id = button.data('taskid');
-    var editbutton = '<a href="javascript:editTask("' + t_id + '") class="btn btn-sm btn-success">編集する</a>'
-    var deletebutton = '<a href="javascript:deleteTask("' + t_id + '") class="btn btn-sm btn-danger">削除する</a>'
-
-    var modal = $(this);
-    modal.find('.modal-title input#m-title').val(title);
-    modal.find('.modal-body input#m-start-date').val(start_date);
-    modal.find('.modal-body input#m-end-date').val(end_date);
-    modal.find('.modal-footer a#edit-button').html(editbutton);
-    modal.find('.modal-footer a#delete-button').html(deletebutton);
-    })
-</script>
 
 <script type="text/javascript">
 
