fix top explanation

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -23,36 +23,50 @@
         </div>
     </div>
     <hr>
+        <div class="text-center">
+            <h3><i class="fas fa-thumbs-up"></i>　こんな利点がある！</h3>
+            <br>
+            <p>trelloみたいな感じ？　使い方の説明も見せたいが・・・</p>
+        </div>
+    <hr>
     <div style="margin:30px 30px;">
-    <div class="explanation-area">
-        <div class="text-center"><h3><i class="fas fa-mouse-pointer"></i>　使い方</h3></div>
-        <br>
-        <div class="row text-center">
-            <div class="col-sm-6">
-                <h6>１：幹事の名前と日程を入力します</h6>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage1.png" width="80%" style="margin:20px auto;border:1px solid #777;">
-                <br><br>
-                <p>80日前から始めましょう(要検討箇所)<br><strong style="font-size:24px;">飲み会幹事用のページも作る！</strong></p>
-                <br>
-            </div>
-            <div class="col-sm-6">
-                <h6>２：「やること」が自動で出てきます。確認しましょう。</h6>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage2.png" width="80%" style="margin:20px auto;border:1px solid #777;">
-                <br><br><br>
-                <p></p>
-                <br>
-            </div>
-            <div class="col-sm-6">
-                <h6>３：スケジュールが自動生成されます</h6>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage3.png" width="80%" style="margin:20px auto;border:1px solid #777;">
-                <br>メールアドレスに、ダッシュボードのURLとパスワードが送信されます。<br>
-            </div>
-            <div class="col-sm-6">
-                <h6>４：みんなで一緒に管理しましょう</h6>
-                <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage4.png" width="80%" style="margin:20px auto;border:1px solid #777;">
-                <br><br>
+        <div class="explanation-area">
+            <div class="text-center"><h3><i class="fas fa-mouse-pointer"></i>　使い方</h3></div>
+            <br><br>
+            <div class="row text-center">
+                <div class="col-sm-6">
+                    <h5>１：タスク管理するカテゴリーを選びましょう。</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_1.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br><br><br>
+                </div>
+                <div class="col-sm-6">
+                    <h5>２：タスク管理をしたい内容を選びましょう。</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_2.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br><br><br>
+                </div>
+                <div class="col-sm-6">
+                    <h5>３：タスクが自動生成されます。</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_3.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br>
+                    日程は用途に合わせて調整できます。
+                    <br><br><br>
+                </div>
+                <div class="col-sm-6">
+                    <h5>４：ログイン情報をメモしましょう</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_4.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br><br><br>
+                </div>
+                <div class="col-sm-6">
+                    <h5>５：みんなでスケジュールを管理しましょう！</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_5.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br><br><br>
+                </div>
+                <div class="col-sm-6">
+                    <h5>！　参考になるページを表示しますよ</h5>
+                    <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/page_6.png" width="80%" style="margin:20px auto;border:1px solid #777;">
+                    <br><br>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
